 * Language and i18n:
   * New translations: Shavian
   * Updated translations: Dutch, Estonian, German, Hungarian, Russian,
     Serbian, Slovak
 * Units:
   * New animation WML and macros for the Drakes
 * User interface:
   * Enabled the new event handler by default now
 * WML engine:
   * Added 'side Y turn' and 'side Y turn X' events
 * Miscellaneous and bugfixes:
   * Add-ons download list now takes filtering into account for
     displaying descriptions
   * Various code cleanups
   * Fixed a lot of issues found by cppcheck.
   * Fixed "Revert all changes" feature in the map editor (bug #14266)
   * Fixed broken illumination overlay in ToD sidebar image

Version 1.7.6:
 * AI:
   * Stabilized syntax of [modify_ai] tag
   * Reorganized AI macro library
   * Added 'move leader to target' candidate action
   * Added recall capabilities to default ai.
   * Added recall formula ai function and ai.recall_list formula ai attribute.
   * Modified default ai recruitment to recall good units from recall list.
   * Modified default ai recruitment to consider enemy potential recruits
     during recruitment.
   * Added the capability to control leader goal of allied leaders.
     Enabled this for certain LoW scenarios.
 * Animations
   * new animations to help drakes to take off and land : pre-movement,
     post-movement, draw_weapon, sheath_weapon
 * Formula AI:
   * New 'reduce()' formula function
 * Graphics:
   * New portraits for Merman Spearman, Bat, Merman Netcaster, Nightgaunt,
     Spectre, Shadow
   * Added a couple of missing frames for the Inferno Drake
   * Show HP/XP bars during leveling animation.
   * When a unit reach a new level, a floating label indicates it.
 * Language and i18n:
   * Updated translations: Czech, Dutch, Estonian, Finnish, French, German,
     Italian, Lithuanian, Russian, Serbian, Spanish.
   * New translations: Vietnamese
 * Multiplayer:
   * New map: 4p Ruins of Terra-Dwelve
 * Music and sound effects: